Added to modify SUMIF  function to change Calc's handling of the 3rd paramter identical to Excel's (#i85000#, n#350716).
* patches/src680/sc-openformula-sumif.diff: added to modify SUMIF 
function to change Calc's handling of the 3rd paramter identical to
Excel's (#i85000#, n#350716).

* patches/src680/sc-dbrange-dynamic-resize.diff: added to support 
dynamic resizing (but no shrinking) of a filtered range for the 
autofilter, standard filter, and the advanced filter functionalities,
n#352662

* patches/src680/apply: apply the patches.

2007-02-18  Jan Holesovsky  <kendy@suse.cz>

* patches/src680/gnome-vfs-cifs-locking.diff,
patches/src680/apply: Map ETXTBSY errno to locking violation,
necessary for CIFS, n#333001

2008-02-18  Noel Power  <noel.power@novell.com>

* patches/src680/save-doc-withembedded-doc-with-vba-crash.diff:
fix to store simple VBA objects in Word documents, n#339946

2007-02-18  Fridrich Strba  <fridrich.strba@bluewin.ch>

* patches/src680/sw-special-locales-date-string.diff,
patches/src680/apply: fix a conversion of date string in localized
Word documents, n#344306

2008-02-18  Petr Mladek  <pmladek@suse.cz>

* download.in, bin/unpack, patches/src680/apply,
patching file patches/src680/build-java-target.diff,
patches/src680/hsqldb-private-protected-to-public.diff
patches/src680/cws-hsql1808.diff: updates to hsqldb_1_8_0_9.zip
and fixes possibility to run arbitrary code, CVE-2007-4575, n#343765

--- a/download.in
+++ b/download.in
@@ -46,6 +46,8 @@ sub usage {
     'biblio.*'				 => '@MIRROR@/SRC680',
 # CalcSolver bits
     'lp_solve_.*'			 => '@MIRROR@/SRC680',
+# Improved hsqldb version that allows to fix a sec bug, CVE-2007-4575
+    'hsqldb_*'			         => '@MIRROR@/SRC680',
 # Graphite rendering bits
     'silgraphite-.*'                     => '@MIRROR@/SRC680',
 # Prebuilt dictionaries for Novell Windows builds
@@ -245,6 +247,10 @@ if ('@GRAPHITE_SRC@' ne '') {
 
 if ('true' ne '') {
    push @files, ( 'lp_solve_5.5.0.10_source.tar.gz' );
+}
+
+if ('true' ne '') {
+   push @files, ( 'hsqldb_1_8_0_9.zip' );
 }
 
 if ('@SYSTEM_LIBWPD@' eq 'NO') {
